# wikitranslator

./: .gitignore  .swp  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/: test_wikit.py  wikit.py
src/wikit/: cli.py  languages.py  scrape.py  translations.py
tests/: test_languages.py  test_translations.py
