[metadata]
name = wikit
description = Translate using Wikipedia titles
author = Asger Skov Velling
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    wikit
install_requires =
    requests>=2
    click>=8
    bs4
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    wikit = wikit.cli:translate

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
wikit = py.typed

[flake8]
max-line-length = 160